--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+@import 'https://js.arcgis.com/4.24/@arcgis/core/assets/esri/themes/light/main.css';
 body {
     background-color: #F5F5F5FF;
+}
+
+.mapDiv {
+    padding: 0;
+    margin: 0;
+    height: 100%;
+    width: 100%;
 }
